feat: tiltrotor gz

--- a/models/tiltrotor/model.config
+++ b/models/tiltrotor/model.config
@@ -10,6 +10,6 @@
   </author>
 
   <description>
-    This is a model for a quad-tiltrotor with motors in x configuration.
+    This is a model for a tiltrotor with motors in Y configuration.
   </description>
 </model>
